--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - make check_spelling
 
 script:
-  - make tests
+  - make test
   - if [ "${LATEST}" = "true" ]; then make; else make local; fi
 
 after_success:
